--- a/css/settings.css
+++ b/css/settings.css
@@ -32,19 +32,6 @@ input[type=button]:active, input[type=submit]:active {
   font-weight:bold;
 }
 
-.error.exception.name {
-  display:block;
-  font-weight:bold;
-  color:red;
-  margin-left:2em;
-}
-.error.exception.trace {
-  display:block;
-  font-weight:bold;
-  color:blue;
-  margin-left:2em;
-}
-
 #appsettings_popup div.personalblock.admin {
   min-width:46em;
   min-height:30em;
